# mori

./: .gitignore  Cargo.toml  README.md  mori.html  mori.md  mori.py  readme.md  template.html  test.toml
examples/basics/: 2024-01-07_firstpost.md  2024-01-08_secondpost.md  index.html  template.html
src/: main.rs
