[package]
name = "mori"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown = "1.0.0-alpha.7" # https://crates.io/crates/markdown
mlua = { version = "0.8", features = ["lua54", "vendored"] } # https://github.com/khvzak/mlua
fs_extra = "1.3.0"
clap = { version = "4.3.0", features = ["derive"] }
